@@ -17,6 +17,10 @@ ENDIF(WIN32)
 # Create the library
 #ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
 ADD_LIBRARY(${OPJ_PREFIX}openjp3dvm ${JP3DVM_SRCS})
+SET_TARGET_PROPERTIES(${OPJ_PREFIX}openjp3dvm
+  PROPERTIES
+    VERSION   1.3.0
+    SOVERSION 1)
 
 # Install library
 INSTALL_TARGETS(/lib/ ${OPJ_PREFIX}openjp3dvm)
@@ -25,3 +29,5 @@ INSTALL_TARGETS(/lib/ ${OPJ_PREFIX}openjp3dvm)
 INSTALL(FILES openjpeg.h
   DESTINATION ${OPENJPEG_INSTALL_INCLUDE_DIR}/openjpeg3d-1.3
   RENAME openjpeg3d.h)
+INSTALL(CODE
+  "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E create_symlink \$ENV{DESTDIR}\${CMAKE_INSTALL_PREFIX}/${OPENJPEG_INSTALL_INCLUDE_DIR}/openjpeg3d-1.3/openjpeg3d.h \$ENV{DESTDIR}\${CMAKE_INSTALL_PREFIX}/${OPENJPEG_INSTALL_INCLUDE_DIR}/openjpeg3d.h)")
